# HelloOpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  New Text Document.txt  README.md
libs/include/glad/: gl.h
shaders/: text.fs  text.vs
src/: Text2.cpp  Text2.hpp  main.cpp  navigation.txt
src/luna/: Luna.hpp  LunaDefines.hpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  Window.cpp  Window.hpp
src/mini/: miniGL.h
src/mira/: Input.cpp  Input.hpp  Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
